tests/typing/fail/spawn-01.stderr
error: unexpected end of input, expected identifier
 --> tests/typing/fail/spawn-01.rs:3:1
  |
3 | / sync! {
4 | |     #![pass(1)]
5 | |
6 | |     node oui(a : int) = ()
7 | |     where
8 | |         b : int = spawn non(a, 0),
9 | | }
  | |_^
  |
  = note: this error originates in the macro `sync` (in Nightly builds, run with -Z macro-backtrace for more info)
